--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
     
-    <title>React App</title>
+    <title>Benford's law covid-19</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
